cedar-lean/UnitTest/parser_tests/negative/extra_scope_element.cedar
permit(principal, action, resource, context);
